two state regulation and self regulation

--- a/simulationScripts/parameter_generation.ipynb
+++ b/simulationScripts/parameter_generation.ipynb
@@ -287,6 +287,244 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter labels: ['k_on_TF', 'k_off_TF', 'burst_size_TF', 'k_on_Target', 'k_off_Target', 'burst_size_Target', 'splicing_half_life_minutes', 'mrna_half_life_TF', 'mrna_half_life_Target', 'TF_protein_half_life', 'Target_protein_half_life', 'TF_protein_production_rate', 'Target_protein_production_rate', 'n']\n",
+      "Number of variable parameters: 14\n",
+      "\n",
+      "Generated 25000 parameter combinations\n",
+      "Total parameters: 19\n",
+      "Variable parameters: 14\n",
+      "Constant parameters: 5\n",
+      "\n",
+      "First few rows:\n",
+      "    k_on_TF   k_off_TF  burst_size_TF  k_on_Target  k_off_Target  \\\n",
+      "0  0.212057  54.846591      66.214204     0.426055     19.495394   \n",
+      "1  0.352080  41.734085      60.684423     0.430295     79.425398   \n",
+      "2  0.225709  60.895993      73.309651     0.427175     22.739263   \n",
+      "3  0.163129  70.613412      27.556382     0.254790     23.217297   \n",
+      "4  0.305333  59.843094      37.321632     0.153272     22.112331   \n",
+      "\n",
+      "   burst_size_Target  splicing_half_life_minutes  mrna_half_life_TF  \\\n",
+      "0          28.109112                    5.480848           4.757901   \n",
+      "1          68.546117                    4.483740           1.098902   \n",
+      "2          52.101514                    3.326896           1.571080   \n",
+      "3          33.115856                    2.708897           5.706172   \n",
+      "4          22.212780                    5.883162           4.297934   \n",
+      "\n",
+      "   mrna_half_life_Target  TF_protein_half_life  Target_protein_half_life  \\\n",
+      "0               2.112222             62.512270                 80.678788   \n",
+      "1               2.541052             89.357653                 24.585574   \n",
+      "2               1.676249             45.129039                 86.411606   \n",
+      "3               5.372139             25.056370                 17.504181   \n",
+      "4               2.547221             46.053377                 87.313392   \n",
+      "\n",
+      "   TF_protein_production_rate  Target_protein_production_rate         n  \\\n",
+      "0                    0.152482                        0.140564  1.244974   \n",
+      "1                    0.141753                        0.132263  4.128123   \n",
+      "2                    0.145663                        0.201452  1.329427   \n",
+      "3                    0.037952                        0.281746  4.309753   \n",
+      "4                    0.042715                        0.116181  4.393456   \n",
+      "\n",
+      "   labeling_efficiency  pulse_time  num_cells dynamics  capture_efficiency  \n",
+      "0                    1          60      20000       MM                   1  \n",
+      "1                    1          60      20000       MM                   1  \n",
+      "2                    1          60      20000       MM                   1  \n",
+      "3                    1          60      20000       MM                   1  \n",
+      "4                    1          60      20000       MM                   1  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.stats import qmc\n",
+    "\n",
+    "# Define parameter ranges (keeping original ranges for similar parameter types)\n",
+    "ranges_for_kOn = np.linspace(0.125, 0.5, 10)\n",
+    "ranges_for_kOff = np.linspace(1.33, 80, 10)\n",
+    "ranges_for_mRNA_halflife = np.linspace(1, 6, 10)\n",
+    "ranges_for_protein_halflife = np.linspace(10, 90, 10)\n",
+    "ranges_for_burst_size = np.linspace(15, 80, 10)\n",
+    "ranges_for_translation_rate = np.linspace(0.020, 0.320, 10)\n",
+    "ranges_for_n = np.linspace(0.5, 5, 10)\n",
+    "\n",
+    "# Updated parameter dictionary with all parameters\n",
+    "params_median_both_TF = {\n",
+    "    'k_on_TF': 0.27,\n",
+    "    'k_off_TF': 8.4,\n",
+    "    'burst_size_TF': 32,\n",
+    "    'k_on_Target': 0.25,\n",
+    "    'k_off_Target': 7.7,\n",
+    "    'burst_size_Target': 40,\n",
+    "    'splicing_half_life_minutes': 1,\n",
+    "    'mrna_half_life_TF': 2.5,\n",
+    "    'mrna_half_life_Target': 3.7,\n",
+    "    'TF_protein_half_life': 28,\n",
+    "    'Target_protein_half_life': 28,\n",
+    "    'TF_protein_production_rate': 0.059,\n",
+    "    'Target_protein_production_rate': 0.059,\n",
+    "    'n': 2,\n",
+    "    'labeling_efficiency': 1,\n",
+    "    'pulse_time': 60,\n",
+    "    'num_cells': 20_000,\n",
+    "    'dynamics': 'MM',\n",
+    "    'capture_efficiency': 1\n",
+    "}\n",
+    "\n",
+    "# Separate variable and constant parameters\n",
+    "params_variable = {\n",
+    "    'k_on_TF': 0.27,\n",
+    "    'k_off_TF': 8.4,\n",
+    "    'burst_size_TF': 32,\n",
+    "    'k_on_Target': 0.25,\n",
+    "    'k_off_Target': 7.7,\n",
+    "    'burst_size_Target': 40,\n",
+    "    'splicing_half_life_minutes': 1,\n",
+    "    'mrna_half_life_TF': 2.5,\n",
+    "    'mrna_half_life_Target': 3.7,\n",
+    "    'TF_protein_half_life': 28,\n",
+    "    'Target_protein_half_life': 28,\n",
+    "    'TF_protein_production_rate': 0.059,\n",
+    "    'Target_protein_production_rate': 0.059,\n",
+    "    'n': 2\n",
+    "}\n",
+    "\n",
+    "params_constant = {\n",
+    "    'labeling_efficiency': 1,\n",
+    "    'pulse_time': 60,\n",
+    "    'num_cells': 20_000,\n",
+    "    'dynamics': 'MM',\n",
+    "    'capture_efficiency': 1\n",
+    "}\n",
+    "\n",
+    "def generate_latin_hypercube_samples(params_variable, params_constant, n_samples=10000):\n",
+    "    seed = 101010\n",
+    "    param_labels = list(params_variable.keys())\n",
+    "    \n",
+    "    # Define bounds for each parameter based on parameter type\n",
+    "    # Order matches param_labels: k_on_TF, k_off_TF, burst_size_TF, k_on_Target, k_off_Target, \n",
+    "    # burst_size_Target, splicing_half_life_minutes, mrna_half_life_TF, mrna_half_life_Target,\n",
+    "    # TF_protein_half_life, Target_protein_half_life, TF_protein_production_rate, \n",
+    "    # Target_protein_production_rate, n\n",
+    "    \n",
+    "    lower_bound = [\n",
+    "        0.125,  # k_on_TF\n",
+    "        1.33,   # k_off_TF  \n",
+    "        15,     # burst_size_TF\n",
+    "        0.125,  # k_on_Target\n",
+    "        1.33,   # k_off_Target\n",
+    "        15,     # burst_size_Target\n",
+    "        1,      # splicing_half_life_minutes (using mRNA halflife range)\n",
+    "        1,      # mrna_half_life_TF\n",
+    "        1,      # mrna_half_life_Target\n",
+    "        10,     # TF_protein_half_life\n",
+    "        10,     # Target_protein_half_life\n",
+    "        0.020,  # TF_protein_production_rate\n",
+    "        0.020,  # Target_protein_production_rate\n",
+    "        0.5     # n\n",
+    "    ]\n",
+    "    \n",
+    "    upper_bound = [\n",
+    "        0.5,    # k_on_TF\n",
+    "        80,     # k_off_TF\n",
+    "        80,     # burst_size_TF\n",
+    "        0.5,    # k_on_Target\n",
+    "        80,     # k_off_Target\n",
+    "        80,     # burst_size_Target\n",
+    "        6,      # splicing_half_life_minutes (using mRNA halflife range)\n",
+    "        6,      # mrna_half_life_TF\n",
+    "        6,      # mrna_half_life_Target\n",
+    "        90,     # TF_protein_half_life\n",
+    "        90,     # Target_protein_half_life\n",
+    "        0.320,  # TF_protein_production_rate\n",
+    "        0.320,  # Target_protein_production_rate\n",
+    "        5       # n\n",
+    "    ]\n",
+    "    \n",
+    "    # Create Latin Hypercube sampler\n",
+    "    sampler = qmc.LatinHypercube(d=len(param_labels), optimization=\"random-cd\", seed=seed)\n",
+    "    sample = sampler.random(n=n_samples)\n",
+    "    \n",
+    "    # Scale parameters to their respective bounds\n",
+    "    scaled_parameters = qmc.scale(sample, lower_bound, upper_bound)\n",
+    "    \n",
+    "    print(\"Parameter labels:\", param_labels)\n",
+    "    print(\"Number of variable parameters:\", len(param_labels))\n",
+    "    \n",
+    "    # Create DataFrame with scaled parameters\n",
+    "    samples = pd.DataFrame(scaled_parameters, columns=param_labels)\n",
+    "    \n",
+    "    # Add constant parameters to the samples\n",
+    "    for key, value in params_constant.items():\n",
+    "        samples[key] = value\n",
+    "    \n",
+    "    return samples\n",
+    "\n",
+    "# Generate parameter samples\n",
+    "parameter_samples_df = generate_latin_hypercube_samples(params_variable, params_constant, n_samples=25000)\n",
+    "\n",
+    "# Display basic info about the generated samples\n",
+    "print(f\"\\nGenerated {len(parameter_samples_df)} parameter combinations\")\n",
+    "print(f\"Total parameters: {len(parameter_samples_df.columns)}\")\n",
+    "print(f\"Variable parameters: {len(params_variable)}\")\n",
+    "print(f\"Constant parameters: {len(params_constant)}\")\n",
+    "print(\"\\nFirst few rows:\")\n",
+    "print(parameter_samples_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameter_samples_df.to_csv(\"/home/mzo5929/Keerthana/grnInference/simulationData/parameters_25000_both_TF.csv\", index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameter_samples_df = pd.read_csv(\"/home/mzo5929/Keerthana/grnInference/simulationData/parameters_25000_both_TF.csv\")\n",
+    "#Convert whatever possible to float and remove the rest\n",
+    "parameter_samples_df = parameter_samples_df[['k_on_TF', 'k_off_TF', 'burst_size_TF', 'k_on_Target', 'k_off_Target', 'burst_size_Target', 'splicing_half_life_minutes', 'mrna_half_life_TF', 'mrna_half_life_Target', 'TF_protein_half_life', 'Target_protein_half_life', 'TF_protein_production_rate', 'Target_protein_production_rate', 'n']]\n",
+    "parameter_samples_df = parameter_samples_df.apply(pd.to_numeric, errors='coerce')\n",
+    "parameter_samples_df\n",
+    "correlation_matrix = parameter_samples_df.corr()\n",
+    "# # Values should be close to 0 for good space-filling\n",
+    "# print(\"\\nCorrelation matrix:\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "91.21875"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2919/32"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
