--- a/simulationScripts/steady_state.ipynb
+++ b/simulationScripts/steady_state.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
     "param_dict = {\n",
     "'k_on_TF': 0.25,\n",
     "'k_off_TF': 8.4,\n",
-    "'basal_TF_rate': 32 * 8.4,\n",
+    "'TF_transcription_rate': 32 * 8.4,\n",
     "'TF_mRNA_degradation_rate': np.log(2)/2.5,\n",
     "'splicing_rate_TF': np.log(2) / (7 / 60),\n",
     "'TF_protein_production_rate': 0.059,\n",
@@ -438,9 +438,9 @@
     "# Target gene parameters\n",
     "'k_on_Target': 0.25,\n",
     "'k_off_Target': 8.4,\n",
-    "'basal_Target_rate': 32 * 8.4,\n",
+    "'Target_transcription_rate': 32 * 8.4,\n",
     "'Target_mRNA_degradation_rate': np.log(2)/2.5,\n",
-    "'splicing_rate_Target':  np.log(2) / (7 / 60),\n",
+    "'splicing_rate':  np.log(2) / (7 / 60),\n",
     "'Target_protein_production_rate': 0.059,\n",
     "'Target_protein_degradation_rate': np.log(2) / 28,\n",
     "\n",
@@ -540,6 +540,96 @@
     "splicesd_mRNA = mRNA_prod * splicing_rate / TF_mRNA_degradation_rate\n",
     "protein_level = splicesd_mRNA * protein_production_rate / TF_protein_degradation_rate\n",
     "print(splicesd_mRNA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_steady_state_self_regulating_TF(\n",
+    "    k_on_TF, k_off_TF, TF_transcription_rate, TF_mRNA_degradation_rate, \n",
+    "    splicing_rate, TF_protein_production_rate, TF_protein_degradation_rate,\n",
+    "    k_on_Target, k_off_Target, Target_transcription_rate, Target_mRNA_degradation_rate, \n",
+    "    Target_protein_production_rate, Target_protein_degradation_rate,\n",
+    "    max_effect=16.0, TF_hill=0.5, **kwargs\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Calculate steady state for system where:\n",
+    "    - TF regulates itself (self-regulation)\n",
+    "    - TF regulates Target \n",
+    "    - Hill function = 0.5 at steady state (EC50 normalization)\n",
+    "    \n",
+    "    Returns steady-state protein levels for TF and Target\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def steady_state_equations(TF_p_ss):\n",
+    "        \"\"\"\n",
+    "        System of equations to solve for TF steady state.\n",
+    "        At steady state, Hill function = 0.5 by design.\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        # TF self-regulation: Hill function = 0.5 at steady state\n",
+    "        k_TF_eff = k_on_TF * max_effect * TF_hill  # TF_hill = 0.5\n",
+    "        b_TF = k_TF_eff / (k_TF_eff + k_off_TF)\n",
+    "        \n",
+    "        # Calculate what TF protein level should be given this burst fraction\n",
+    "        TF_u_ss = (TF_transcription_rate * b_TF) / (TF_mRNA_degradation_rate + splicing_rate)\n",
+    "        TF_s_ss = (TF_u_ss * splicing_rate) / TF_mRNA_degradation_rate\n",
+    "        TF_p_predicted = (TF_s_ss * TF_protein_production_rate) / TF_protein_degradation_rate\n",
+    "        \n",
+    "        # This should equal our input TF_p_ss for self-consistency\n",
+    "        return TF_p_predicted - TF_p_ss\n",
+    "    \n",
+    "    # Solve for self-consistent TF protein level\n",
+    "    TF_p_ss = fsolve(steady_state_equations, 1.0)[0]\n",
+    "    \n",
+    "    # Now calculate Target steady state (regulated by TF)\n",
+    "    # Target is regulated by TF protein level\n",
+    "    k_Target_eff = k_on_Target * max_effect * TF_hill  # Same Hill value (0.5)\n",
+    "    b_Target = k_Target_eff / (k_Target_eff + k_off_Target)\n",
+    "    \n",
+    "    # Target steady states\n",
+    "    Target_u_ss = (Target_transcription_rate * b_Target) / (Target_mRNA_degradation_rate + splicing_rate)\n",
+    "    Target_s_ss = (Target_u_ss * splicing_rate) / Target_mRNA_degradation_rate\n",
+    "    Target_p_ss = (Target_s_ss * Target_protein_production_rate) / Target_protein_degradation_rate\n",
+    "    \n",
+    "    # Recalculate TF intermediates for completeness\n",
+    "    k_TF_eff = k_on_TF * max_effect * TF_hill\n",
+    "    b_TF = k_TF_eff / (k_TF_eff + k_off_TF)\n",
+    "    TF_u_ss = (TF_transcription_rate * b_TF) / (TF_mRNA_degradation_rate + splicing_rate)\n",
+    "    TF_s_ss = (TF_u_ss * splicing_rate) / TF_mRNA_degradation_rate\n",
+    "    \n",
+    "    return {\n",
+    "        'average_protein_TF': TF_p_ss,\n",
+    "        'average_protein_Target': Target_p_ss,\n",
+    "        # Additional info\n",
+    "    }\n",
+    "\n",
+    "# Example usage\n",
+    "average_values = get_steady_state_self_regulating_TF(**param_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'average_protein_TF': 424.5380853839091,\n",
+       " 'average_protein_Target': 424.5380853839091}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average_values"
    ]
   }
  ],
