--- a/simulationScripts/generalized_script_untested/simulation.ipynb
+++ b/simulationScripts/generalized_script_untested/simulation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "a32ed262",
    "metadata": {
     "lines_to_next_cell": 1
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "id": "a13b7697",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "8dfdc6d1",
    "metadata": {
     "lines_to_next_cell": 1
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "id": "120c9c84",
    "metadata": {
     "lines_to_next_cell": 1
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "id": "cd4b19f8",
    "metadata": {
     "lines_to_next_cell": 1
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "id": "efd02ed8",
    "metadata": {},
    "outputs": [],
@@ -203,8 +203,26 @@
     "                hill_sum = np.sum(target_hill * interaction_matrix[regulators, i])                \n",
     "            else:\n",
     "                hill_sum = 0\n",
-    "            k_on_eff = k_on[i] * (1 + max_effect * hill_sum)\n",
-    "            print(f\"Gene {i+1}: k_on_eff = {k_on_eff}, Hill sum = {hill_sum}\")\n",
+    "            # if len(regulators) > 0:\n",
+    "            #     # Compute weighted log-hill terms\n",
+    "            #     hill_log = np.log(np.clip(target_hill, 1e-10, None))  # prevent log(0)\n",
+    "            #     weights = interaction_matrix[regulators, i]\n",
+    "            #     log_weighted = hill_log * weights\n",
+    "\n",
+    "            #     # Compute product of hill_j ** weight_j\n",
+    "            #     hill_prod = np.exp(np.sum(log_weighted))\n",
+    "\n",
+    "            #     # Clip final product (not individual terms)\n",
+    "            #     hill_prod_clipped = np.clip(hill_prod, 1e-10, 1)\n",
+    "            # else:\n",
+    "            #     hill_prod_clipped = 0  # No regulators → no regulatory input\n",
+    "\n",
+    "            # # Final adjusted k_on\n",
+    "            # k_on_eff = k_on[i] + max_effect * hill_prod_clipped\n",
+    "\n",
+    "            k_on_eff = k_on[i] + max_effect * hill_sum\n",
+    "            k_on_eff = np.clip(k_on_eff, 1e-10, None)  # Ensure non-negative\n",
+    "            # print(f\"Gene {i+1}: k_on_eff = {k_on_eff}, Hill sum = {hill_sum}\")\n",
     "            # Bursting + splicing + translation\n",
     "            burst_prob = k_on_eff / (k_on_eff + k_off[i])\n",
     "            unspliced = txn_rate[i] * burst_prob / (m_deg[i] + splicing_rate)\n",
@@ -233,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "id": "302a5cba",
    "metadata": {},
    "outputs": [],
@@ -258,15 +276,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "id": "b6d164f7",
    "metadata": {
     "lines_to_next_cell": 0
    },
    "outputs": [],
    "source": [
-    "def get_new_state(state_array, param_matrix, interaction_matrix, state_var_indices, \n",
-    "                                   EC50_matrix=None, global_params=None, t=1/60):\n",
+    "def get_new_state(state_array, param_matrix, interaction_matrix, state_var_indices, n_genes, n_state_vars, num_cells,\n",
+    "                                   EC50_matrix=None, global_params=None, t=1/60, ):\n",
     "    \"\"\"\n",
     "    Pure 3D matrix operations - everything happens simultaneously across all genes and cells.\n",
     "    \n",
@@ -285,7 +303,7 @@
     "    if global_params is None:\n",
     "        global_params = {\"splicing_rate\": np.log(2)/(7/60), \"max_effect\": 16, \"n\": 2}\n",
     "    \n",
-    "    n_genes, n_state_vars, num_cells = state_array.shape\n",
+    "    assert state_array.shape == (n_genes, n_state_vars, num_cells)\n",
     "    new_state = state_array.copy()\n",
     "    \n",
     "    # Short aliases\n",
@@ -361,8 +379,8 @@
     "    \n",
     "    # === STEP 5: K_ON ADJUSTMENT ===\n",
     "    \n",
-    "    # === STEP 5: K_ON ADJUSTMENT ===\n",
     "\n",
+    "    # === Additive interaction === #\n",
     "    if interaction_matrix is not None and np.any(interaction_matrix != 0):\n",
     "        protein_levels = new_state[:, s[\"protein\"], :]  # shape: (n_genes, num_cells)\n",
     "\n",
@@ -377,13 +395,44 @@
     "            raise ValueError(\"EC50 input must be a 1D array when using vectorized logic.\")\n",
     "        \n",
     "        base_k_on = param_matrix['k_on'].values.reshape(n_genes, 1)\n",
-    "        k_on_adjusted = base_k_on * (1 + max_effect*regulatory_effects)\n",
+    "        k_on_adjusted = base_k_on + max_effect*regulatory_effects\n",
     "    else:\n",
     "        k_on_adjusted = np.tile(param_matrix['k_on'].values.reshape(n_genes, 1), (1, num_cells))\n",
-    "\n",
+    "    k_on_adjusted = np.maximum(k_on_adjusted, 1e-10)  # Avoid zero in denominator\n",
     "    \n",
     "    # Store in state array\n",
     "    new_state[:, s[\"k_on_adjusted\"], :] = k_on_adjusted\n",
+    "\n",
+    "\n",
+    "    # # === Multiplicative interaction === #\n",
+    "    # if interaction_matrix is not None and np.any(interaction_matrix != 0):\n",
+    "    #     protein_levels = new_state[:, s[\"protein\"], :]  # shape: (n_genes, num_cells)\n",
+    "\n",
+    "    #     if EC50_matrix is not None and EC50_matrix.ndim == 1:\n",
+    "    #         EC50_vector = EC50_matrix.reshape(n_genes, 1)\n",
+    "    #         hill_responses = (protein_levels ** n) / (EC50_vector ** n + protein_levels ** n)\n",
+    "\n",
+    "    #         # Clip to avoid log(0)\n",
+    "    #         hill_clipped = np.clip(hill_responses, 1e-6, 1)\n",
+    "\n",
+    "    #         # log-sum-exp for product\n",
+    "    #         log_effects = interaction_matrix.T @ np.log(hill_clipped)\n",
+    "    #         product_effects = np.exp(log_effects)  # shape: (n_genes, num_cells)\n",
+    "\n",
+    "    #         # Scale product by number of non-zero regulators per target gene\n",
+    "    #         regulator_counts = (interaction_matrix != 0).sum(axis=0).reshape(-1, 1)  # shape: (n_genes, 1)\n",
+    "    #         scaled_effects = regulator_counts * product_effects\n",
+    "\n",
+    "    #     else:\n",
+    "    #         raise ValueError(\"EC50 must be a 1D array.\")\n",
+    "\n",
+    "    #     base_k_on = param_matrix['k_on'].values.reshape(n_genes, 1)\n",
+    "    #     k_on_adjusted = base_k_on + max_effect * scaled_effects\n",
+    "    # else:\n",
+    "    #     k_on_adjusted = np.tile(param_matrix['k_on'].values.reshape(n_genes, 1), (1, num_cells))\n",
+    "\n",
+    "    # k_on_adjusted = np.maximum(k_on_adjusted, 1e-10)\n",
+    "    # new_state[:, s[\"k_on_adjusted\"], :] = k_on_adjusted\n",
     "    \n",
     "    # === STEP 6: BURST SWITCHING - ALL GENES & CELLS AT ONCE ===\n",
     "    \n",
@@ -413,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "id": "ee0010d0",
    "metadata": {
     "lines_to_next_cell": 1
@@ -432,7 +481,7 @@
     "        np.ndarray: Random state array of shape (n_genes, n_state_vars, num_cells)\n",
     "    \"\"\"\n",
     "    state_vars_per_gene = [\"is_bursting\", \"unspliced_mRNA\", \"spliced_mRNA\", \"protein\",\n",
-    "                          \"k_on_adjusted\", \"total_mRNA\", \n",
+    "                          \"k_on_adjusted\", \"k_off_adjusted\", \"total_mRNA\", \n",
     "                          \"mRNA_ever_produced\", \"protein_ever_produced\"]\n",
     "    \n",
     "    state_var_indices = {var: i for i, var in enumerate(state_vars_per_gene)}\n",
@@ -449,13 +498,12 @@
     "    state_array[:, state_var_indices[\"protein\"], :] = np.random.uniform(\n",
     "        0, 3 * mean_protein_levels[:, np.newaxis], size=(n_genes, num_cells)\n",
     "    )\n",
-    "    print(state_array.shape)\n",
     "    return state_array, state_var_indices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "id": "2ad59267",
    "metadata": {},
    "outputs": [],
@@ -496,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "id": "df51d1b7",
    "metadata": {
     "lines_to_next_cell": 2
@@ -504,12 +552,26 @@
    "outputs": [],
    "source": [
     "def simulate(path_to_matrix, parameter_sheet_path, num_cells, global_params= None, rows=None):\n",
-    "    \n",
+    "    '''\n",
+    "    Simulates gene regulatory network dynamics over time for a given interaction matrix and parameter sheet.\n",
+    "    Args:\n",
+    "        path_to_matrix (str): Path to the input matrix file containing gene interaction data.\n",
+    "        parameter_sheet_path (str): Path to the parameter sheet file containing gene-specific parameters.\n",
+    "        num_cells (int): Number of cells to simulate before division.\n",
+    "        global_params (dict, optional): Dictionary of global parameters for the simulation. Defaults to:\n",
+    "            - \"splicing_rate\": Splicing rate in per minute.\n",
+    "            - \"max_effect\": List of max_effect for Hill function.\n",
+    "            - \"n\": Hill coefficient.\n",
+    "        rows (list, optional): List of rows to select from the parameter sheet. Defaults to None.\n",
+    "    Returns:\n",
+    "        pd.DataFrame: Combined DataFrame containing simulation results for both original and replicate states.\n",
+    "            - Columns include gene states, time steps, and replicate information.\n",
+    "    '''\n",
     "    if global_params is None:\n",
     "        # Default global parameters if not provided\n",
     "        global_params = {\n",
     "            \"splicing_rate\": np.log(2)/(7/60),  # Splicing rate in per minute\n",
-    "            \"max_effect\": 16,  # Maximum effect for Hill function\n",
+    "            \"max_effect\": 0.27,  # Maximum effect for Hill function\n",
     "            \"n\": 2,  # Hill coefficient\n",
     "        }\n",
     "    print(\"Reading input matrix and parameters...\")\n",
@@ -526,12 +588,13 @@
     "    #Create random cells\n",
     "    print(\"Creating random cells...\")\n",
     "    state_array, state_var_indices = create_random_cells(n_genes, num_cells=num_cells, mean_protein_levels=EC50_vector)\n",
+    "    print(state_var_indices)\n",
     "    #simulation time settings\n",
     "    t = 1/60  # 1 minute time step\n",
     "    total_time = 13 * 24 * 60 \n",
     "    time_to_start_measurement = 12 * 24 * 60  # Start measuring after 12 days\n",
     "    frequency_measurement = 60  # Measure every 60 minutes\\\n",
-    "    steps = np.arange(0, total_time, int(t*60))\n",
+    "    steps = np.arange(0, total_time + 1, int(t*60))\n",
     "    division_time = 12 * 24 * 60  # Division occurs after 12 days\n",
     "    pre_division_steps = np.arange(0, min(total_time, division_time), 1)\n",
     "    after_division_steps = steps[steps > division_time] - division_time\n",
@@ -540,17 +603,17 @@
     "    print(\"Starting simulation...\")\n",
     "    for curr_step in pre_division_steps:\n",
     "        state_array = get_new_state(state_array.copy(), param_matrix, interaction_matrix, state_var_indices, \n",
-    "                                   EC50_vector, global_params, t=t)\n",
+    "                                   n_genes = n_genes, n_state_vars = len(state_var_indices), num_cells = num_cells, EC50_matrix = EC50_vector, global_params=global_params, t=t)\n",
     "    print(\"Simulation before division complete.\")\n",
     "    replicate_state = state_array.copy()\n",
-    "    state_list.append(save_complete_snapshot(state_array, state_var_indices, timestep=curr_step))\n",
-    "    state_list.append(save_complete_snapshot(replicate_state, state_var_indices, timestep=curr_step))\n",
+    "    state_list.append(save_complete_snapshot(state_array, state_var_indices, timestep=0))\n",
+    "    replicate_list.append(save_complete_snapshot(replicate_state, state_var_indices, timestep=0))\n",
     "\n",
     "    for curr_step in after_division_steps:\n",
     "        state_array = get_new_state(state_array.copy(), param_matrix, interaction_matrix, state_var_indices, \n",
-    "                                   EC50_vector, global_params, t=t)\n",
+    "                                   n_genes = n_genes, n_state_vars = len(state_var_indices), num_cells = num_cells, EC50_matrix = EC50_vector, global_params=global_params, t=t)\n",
     "        replicate_state = get_new_state(replicate_state.copy(), param_matrix, interaction_matrix, state_var_indices, \n",
-    "                                   EC50_vector, global_params, t=t)\n",
+    "                                   n_genes = n_genes, n_state_vars = len(state_var_indices), num_cells = num_cells, EC50_matrix = EC50_vector, global_params=global_params, t=t)\n",
     "        \n",
     "        if curr_step >= time_to_start_measurement - division_time and curr_step % frequency_measurement == 0:\n",
     "            state_list.append(save_complete_snapshot(state_array, state_var_indices, timestep=curr_step))\n",
@@ -571,50 +634,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "id": "e1d59e1a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading input matrix and parameters...\n",
-      "[[0 1]\n",
-      " [0 0]]\n",
-      "Calculating EC50 matrix...\n",
-      "Gene 1: k_on_eff = 0.27, Hill sum = 0\n",
-      "Gene 2: k_on_eff = 2.25, Hill sum = 0.5\n",
-      "Gene 1: k_on_eff = 0.27, Hill sum = 0\n",
-      "Gene 2: k_on_eff = 2.25, Hill sum = 0.5\n",
-      "Gene 1: k_on_eff = 0.27, Hill sum = 0\n",
-      "Gene 2: k_on_eff = 2.25, Hill sum = 0.5\n",
-      "Gene 1: k_on_eff = 0.27, Hill sum = 0\n",
-      "Gene 2: k_on_eff = 2.25, Hill sum = 0.5\n",
-      "Gene 1: k_on_eff = 0.27, Hill sum = 0\n",
-      "Gene 2: k_on_eff = 2.25, Hill sum = 0.5\n",
-      "Gene 1: k_on_eff = 0.27, Hill sum = 0\n",
-      "Gene 2: k_on_eff = 2.25, Hill sum = 0.5\n",
-      "Gene 1: k_on_eff = 0.27, Hill sum = 0\n",
-      "Gene 2: k_on_eff = 2.25, Hill sum = 0.5\n",
-      "[  68.74872801 1460.07629957]\n",
-      "Creating random cells...\n",
-      "(2, 8, 20000)\n",
-      "Starting simulation...\n",
-      "Simulation before division complete.\n",
-      "Simulation after division complete.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#Simulating repression by reducing kOn\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "from joblib import Parallel, delayed\n",
+    "from tqdm.notebook import tqdm\n",
+    "from tqdm_joblib import tqdm_joblib\n",
+    "\n",
     "path_to_matrix = \"/home/mzo5929/Keerthana/grnInference/simulationData/general_simulation_data/test_data/matrix101.txt\"\n",
     "path_to_param = \"/home/mzo5929/Keerthana/grnInference/simulationData/general_simulation_data/test_data/parameter_sheet101.csv\"\n",
-    "num_cells = 20000\n",
-    "rows = [0,1]\n",
-    "df = simulate(path_to_matrix, path_to_param, num_cells, global_params= None, rows=rows)\n",
-    "output_folder = \"/home/mzo5929/Keerthana/grnInference/simulationData/general_simulation_data/test_data/\"\n",
-    "file_path = os.path.join(output_folder, \"simulation_matrix101_parameter_sheet101.csv\")\n",
-    "df.to_csv(file_path, index=False)\n"
+    "num_cells = 10000\n",
+    "rows = [0, 0]\n",
+    "output_folder = \"/home/mzo5929/Keerthana/grnInference/simulationData/general_simulation_data/r_add_k_on_repression/\"\n",
+    "os.makedirs(output_folder, exist_ok=True)\n",
+    "r_add_range = np.arange(0.0, 2.01, 0.05)\n",
+    "print(f\"Total runs: {len(r_add_range)}\")\n",
+    "\n",
+    "def run_simulation_for_r_add(r_add, n = 2):\n",
+    "    global_params = {\n",
+    "        \"splicing_rate\": np.log(2) / (7 / 60),\n",
+    "        \"n\": n,\n",
+    "        \"max_effect\": r_add,\n",
+    "    }\n",
+    "    \n",
+    "    try:\n",
+    "        filename = f\"simulation_matrix101_A-|B_mod_kOn_rAdd_{r_add:.2f}_n_{n}_min_k_on_B.csv\"\n",
+    "        file_path = os.path.join(output_folder, filename)\n",
+    "        df = simulate(path_to_matrix, path_to_param, num_cells, global_params=global_params, rows=rows)\n",
+    "        df.to_csv(file_path, index=False)\n",
+    "        return f\"✅ r_add={r_add:.2f} done\"\n",
+    "    except Exception as e:\n",
+    "        return f\"❌ r_add={r_add:.2f} failed: {e}\"\n",
+    "\n",
+    "# Parallel execution with progress bar\n",
+    "with tqdm_joblib(tqdm(desc=\"Running simulations\", total=len(r_add_range))) as _:\n",
+    "    results = Parallel(n_jobs=8)(\n",
+    "        delayed(run_simulation_for_r_add)(r_add) for r_add in r_add_range\n",
+    "    )\n",
+    "\n",
+    "# Print summary\n",
+    "for res in results:\n",
+    "    print(res)\n"
    ]
   }
  ],
