--- a/simulationScripts/steady_state.ipynb
+++ b/simulationScripts/steady_state.ipynb
@@ -2,13 +2,89 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy.optimize import fsolve, root\n",
     "import warnings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_protein_level_with_regulation(params, hill_response=0.0, r_add=10, \n",
+    "                                          splicing_half_life=7/60):\n",
+    "    \"\"\"\n",
+    "    Calculate steady-state protein level given gene parameters and regulatory input.\n",
+    "    \n",
+    "    Args:\n",
+    "        params (array-like): Gene parameters in order:\n",
+    "            [k_on, k_off, burst_size, mrna_half_life, protein_half_life, protein_production_rate]\n",
+    "        hill_response (float): Desired Hill function output (0-1)\n",
+    "            0 = no regulation, 1 = maximum activation\n",
+    "        r_add (float): Maximum regulatory effect strength (default 10)\n",
+    "        splicing_half_life (float): mRNA maturation time (hours, default 7 min)\n",
+    "    \n",
+    "    Returns:\n",
+    "        float: Steady-state protein level\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Unpack parameters in order\n",
+    "    k_on, k_off, burst_size, mrna_half_life, protein_half_life, protein_production_rate = params\n",
+    "    \n",
+    "    # Convert half-lives to degradation rates\n",
+    "    mrna_deg_rate = np.log(2) / mrna_half_life\n",
+    "    protein_deg_rate = np.log(2) / protein_half_life\n",
+    "    splicing_rate = np.log(2) / splicing_half_life\n",
+    "    \n",
+    "    # Calculate transcription rate from burst parameters\n",
+    "    transcription_rate = burst_size * k_off\n",
+    "    \n",
+    "    # Apply regulation: k_on_eff = k_on + r_add * hill_response\n",
+    "    k_on_eff = k_on + r_add * hill_response\n",
+    "    k_on_eff = max(k_on_eff, 1e-10)  # Ensure positive\n",
+    "    \n",
+    "    # Calculate steady-state levels through the cascade\n",
+    "    # 1. Bursting probability\n",
+    "    burst_prob = k_on_eff / (k_on_eff + k_off)\n",
+    "    \n",
+    "    # 2. Unspliced mRNA level\n",
+    "    unspliced_mrna = transcription_rate * burst_prob / (mrna_deg_rate + splicing_rate)\n",
+    "    \n",
+    "    # 3. Spliced mRNA level  \n",
+    "    spliced_mrna = unspliced_mrna * splicing_rate / mrna_deg_rate\n",
+    "    \n",
+    "    # 4. Protein level\n",
+    "    protein_level = spliced_mrna * protein_production_rate / protein_deg_rate\n",
+    "    \n",
+    "    return protein_level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2343.827446672802 7751.145773988586 12995.308035668148\n"
+     ]
+    }
+   ],
+   "source": [
+    "# params = [0.4,69.58,29.9,4.96,17.514,0.0297]\n",
+    "params = [0.212,31.93,79.28,5.54,88.79,0.14]\n",
+    "protein_level_no_reg = calculate_protein_level_with_regulation(params)\n",
+    "protein_level_half_maximal = calculate_protein_level_with_regulation(params, r_add = 1, hill_response = 0.5)\n",
+    "protein_level_maximal = calculate_protein_level_with_regulation(params, r_add = 1, hill_response = 1)\n",
+    "print(protein_level_no_reg, protein_level_half_maximal, protein_level_maximal)"
    ]
   },
   {
@@ -1173,6 +1249,13 @@
     "        if isinstance(value, (int, float)):\n",
     "            print(f\"{key}: {value:.4f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
