--- a/analysis_code/other_analysis/compare_gillespie_vs_one_sec_res.ipynb
+++ b/analysis_code/other_analysis/compare_gillespie_vs_one_sec_res.ipynb
@@ -55,34 +55,31 @@
     "    \"\"\"\n",
     "    \n",
     "    # Unpack parameters in order\n",
-    "    k_on, k_off, burst_size, mrna_half_life, protein_half_life, protein_production_rate = params\n",
+    "    p_on,p_off,mrna_half_life,protein_half_life,p_prod_protein,p_prod_mRNA = params\n",
     "    \n",
     "    # Convert half-lives to degradation rates\n",
     "    mrna_deg_rate = np.log(2) / mrna_half_life\n",
     "    protein_deg_rate = np.log(2) / protein_half_life\n",
     "    splicing_rate = np.log(2) / splicing_half_life\n",
-    "    print(f\"mRNA half-life: {mrna_half_life}, protein half-life: {protein_half_life}\")\n",
+    "    \n",
     "    # Calculate transcription rate from burst parameters\n",
-    "    transcription_rate = burst_size * k_off\n",
+    "    transcription_rate = p_prod_mRNA\n",
     "    \n",
     "    \n",
     "    # Apply regulation: k_on_eff = k_on + r_add * hill_response\n",
-    "    k_on_eff = k_on + r_add * hill_response\n",
+    "    k_on_eff = p_on + r_add * hill_response\n",
     "    k_on_eff = max(k_on_eff, 1e-10)  # Ensure positive\n",
     "    \n",
     "    # Calculate steady-state levels through the cascade\n",
     "    # 1. Bursting probability\n",
-    "    burst_prob = k_on_eff / (k_on_eff + k_off)\n",
+    "    burst_prob = k_on_eff / (k_on_eff + p_off)\n",
     "    \n",
     "    # 2. Unspliced mRNA level\n",
     "    unspliced_mrna = transcription_rate * burst_prob / (mrna_deg_rate)\n",
     "    \n",
-    "    # 3. Spliced mRNA level  \n",
-    "    spliced_mrna = unspliced_mrna\n",
-    "    print\n",
     "    # 4. Protein level\n",
-    "    protein_level = spliced_mrna * protein_production_rate / protein_deg_rate\n",
-    "    print(f\"mRNA levels: {unspliced_mrna}\")\n",
+    "    protein_level = unspliced_mrna * p_prod_protein / protein_deg_rate\n",
+    "    # print(unspliced_mrna + spliced_mrna)\n",
     "    return protein_level"
    ]
   },
@@ -292,7 +289,7 @@
     }
    ],
    "source": [
-    "sim_Gillespie_1000_cells = pd.read_csv('/home/mzo5929/Keerthana/grnInference/code/grnInferenceRepo/simulationScripts/gillespie_simulation/df_row_12_13_3406d9ed.csv')\n",
+    "sim_Gillespie_1000_cells = pd.read_csv('/home/mzo5929/Keerthana/grnInference/simulation_data/gillespie_simulation_run_2/A_and_B/df_row_0_1_09072025_140849_ncells_10000_A_and_B_ecbef25e.csv')\n",
     "time = 47\n",
     "singleTime_df_gillespie = sim_Gillespie_1000_cells[(sim_Gillespie_1000_cells['time_step'] == time)]\n",
     "theoretical_mean_1 = baseline_gene_1\n",
